--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,9 @@ permalink:           pretty
 title:               Poole
 tagline:             The Jekyll Butler
 url:                 http://getpoole.com
-paginate:            1
+paginate:            5
 baseurl:             ""
+paginate_path: '/blog/page:num'
 
 # Assets
 #
@@ -25,6 +26,12 @@ author:
 version:             2.0.0
 github:
   repo:              https://github.com/poole/poole
+
+# Pagelist
+pages_list:
+    Blog: '/blog'
+    Projects: '/projects'
+    CV: '/cv'
 
 # Gems
 gems:
