--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ github:
 # Pagelist
 pages_list:
     Projects: '/projects'
+    Research: '/research'
 #    Blog: '/blog'
 #    Notes: '/notes'
     CV: '/cv'
