opening cv pdf directly now.

--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,8 @@ github:
 pages_list:
     Research: '/research'
     Projects: '/projects'
-    CV: '/cv'
     Misc: '/misc'
+    CV: '/assets/KushalAroraCV.pdf'
 
 
 # Gems
