added updates and blog tab

--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,8 @@ pages_list:
     Research: '/research'
     Projects: '/projects'
     Misc.: '/misc'
+    Updates: '/updates'
+    Blog: '/blog'
     CV: '/cv'
 
 
