--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ url:                 http://kushalarora.github.io
 paginate:            5
 baseurl:             ""
 paginate_path: '/blog/page:num'
+analytics_id: 'UA-87687456-1'
 
 # Assets
 #
