removed blog link.

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ pages_list:
     Projects: '/projects'
     Misc.: '/misc'
     Updates: '/updates'
-    Blog: '/blog'
+#    Blog: '/blog'
     CV: '/cv'
 
 
