added under review Lexsub.

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -15,3 +15,9 @@ Rangarajan:
 
 Mitra:
     url: http://intranet.daiict.ac.in/~suman_mitra/newSite/
+
+Chakraborty:
+    url: http://aishikchakraborty.github.io/
+
+Cheung:
+    url: http://cs.mcgill.ca/~jcheung/
