added sanjay thakur paper to biblography

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -21,3 +21,16 @@ Chakraborty:
 
 Cheung:
     url: http://cs.mcgill.ca/~jcheung/
+
+Thakur:
+    url: https://sanjaykthakur.com/
+    
+Precup:
+    url: https://www.cs.mcgill.ca/~dprecup/
+
+Meger:
+    url: https://www.cim.mcgill.ca/~dmeger/
+
+van-Hoof:
+    url: https://staff.fnwi.uva.nl/h.c.vanhoof/homepage/
+
