--- a/_config.yml
+++ b/_config.yml
@@ -151,7 +151,7 @@ enable_google_analytics:  true
 enable_katex:             true
 enable_mansory:           true
 enable_progressbar:       true
-enable_tooltips:          true
+enable_tooltips:          false
 show_social_icons:        true
 
 # -----------------------------------------------------------------------------
