removed dark mode

--- a/_config.yml
+++ b/_config.yml
@@ -154,7 +154,7 @@ enable_google_analytics:  true
 enable_mansory:           true
 enable_math:              true
 enable_tooltips:          true
-enable_darkmode:          true
+enable_darkmode:          false
 show_social_icons:        true
 
 # -----------------------------------------------------------------------------
