--- a/_config.yml
+++ b/_config.yml
@@ -82,10 +82,10 @@ panelbear_analytics:  # panelbear analytics site ID (format: XXXXXXXXX)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: Kushal's Blog # blog_name will be displayed in your blog page
-blog_nav_title: Kushal's Blog  # your blog must have a title for it to be displayed in the nav bar
-blog_description: #a simple whitespace theme for academics
-permalink: /blog/:year/:title/
+# blog_name: Kushal's Blog # blog_name will be displayed in your blog page
+# blog_nav_title: Kushal's Blog  # your blog must have a title for it to be displayed in the nav bar
+# blog_description: #a simple whitespace theme for academics
+# permalink: /blog/:year/:title/
 
 # Pagination
 pagination:
